--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <div class="col-md-6 offset-md-3 text-center">
                     <div class="card shadow">
                         <div class="card-header">
-                            <b>Dijkstra Shortest Path Calculater</b>
+                            <b>Dijkstra Shortest Path Calculater For Specific Node</b>
                         </div>
                         <div class="card-body">
                             <div class="row">
