--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="ui_assets/bootstrap.min.css">
     </head>
 
-    <body class="pt-5 bg-light">
+    <body class="py-5 bg-light">
         <div class="container mt-5 pt-5">
             <div class="row">
                 <div class="col-md-6 offset-md-3 text-center">
